# cfp

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  deploy.sh  progenv_version.txt  sample.sh  test.sh
.github/workflows/: build_linux_gnu.yml
man/man1/: cfp.1.in
sample/: command_file  launchCfp.pbs
src/: cfp.f  cfp.f90
stage/apps/docs/samples/intel/cfp-job/: runner.sh
stage/apps/prod/cfp/2.0.4/intel/19.1.3.304/man/man1/: cfp.1
stage/apps/prod/cfp/2.0.4/intel/19.1.3.304/samples/: README  hello.f
stage/apps/prod/lmodules/core/cfp/: 2.0.4
support/: buildSample.sh  cfp.1  env.sh  module_template  readme.txt  runSample.sh
test/: hello
tests/: CMakeLists.txt  hello.sh  main_cfp_test_simple.sh
